[package]
name = "finalytics"
version = "0.1.0"
authors = ["Nnamdi Olisaeloka <nnamdiolisaeloka@gmail.com>"]
edition = "2021"
homepage = "https://finalytics.fly.dev/"
repository = "https://github.com/Nnamdi-sys/finalytics"
license = "MIT"
description = "A rust library for financial data analysis"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
scraper = "0.17.1"
select = "0.6.0"
chrono = "0.4"
once_cell = "1.18.0"
polars = { version = "0.33.0", features = ["lazy"] }
ta = "0.5.0"
num-format = "0.4.4"
smartcore = "0.3.2"
statrs = "0.16.0"
rand = "0.8.5"
ndarray = "0.15.6"
rand_distr = "0.4.2"
optimization = "0.2.0"
ejdb = "0.4.1"
rust-bert = { version = "0.21.0", features = ["download-libtorch"] }
plotly = { git = "https://github.com/Nnamdi-sys/plotly.git" }







