[package]
name = "finalytics-apps"
version = "0.1.0"
edition = "2021"

[dependencies]

# Common dependancies
dioxus = { version = "0.5.0", features = ["fullstack", "router"] }
serde = { version = "1.0.159", features = ["derive"] }
log  = "0.4.20"
wasm-logger = "0.2.0"
once_cell = "1.19.0"
bincode = "1.3.3"

# Server dependancies
finalytics = { path = "../finalytics", features = ["kaleido"], optional = true }
yahoo-finance-symbols = { version = "0.1.2" , optional = true }
syntect = { version = "5.2.0", optional = true }
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"], optional = true }
headless_chrome = { version = "1.0.9", optional = true }
chrono = { version = "0.4.35", optional = true }
tokio = { version = "1.36.0", features=["macros", "rt-multi-thread"], optional = true }


[features]
default = []
server = ["dioxus/axum", "tokio", "finalytics", "syntect", "teloxide", "headless_chrome", "chrono", "yahoo-finance-symbols"]
web = ["dioxus/web"]


[build-dependencies]
tokio = { version = "1.36.0", features=["macros", "rt-multi-thread"] }
bincode = "1.3.3"
yahoo-finance-symbols = "0.1.0"
finalytics = { path = "../finalytics" }
