[package]
name = "finalytics-ffi"
version = "0.1.2"
edition = "2021"

[dependencies]
plotly = "0.13.5"
serde_json = "1.0.141"
finalytics = { path = "../rust" }
polars = { version = "0.49.1", default-features = false, features = ["json"] }
tokio = { version = "1.47.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]
