[package]
name = "finalytics"
version = "0.4.0"
authors = ["Nnamdi Olisaeloka <nnamdiolisaeloka@gmail.com>"]
edition = "2021"
homepage = "https://finalytics.rs/"
repository = "https://github.com/Nnamdi-sys/finalytics"
license = "MIT"
description = "A rust library for financial data analysis"
readme = "../README.md"
keywords = ["finance", "analytics"]

[lib]
path = "src/lib.rs"


[dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
chrono = "0.4.37"
select = "0.6.0"
scraper = "0.19.0"
sentiment = "0.1.1"
polars = { version = "0.33.2", default-features = false, features = ["lazy", "dtype-datetime", "rows"] }
ta = "0.5.0"
num-format = "0.4.4"
smartcore = "0.3.2"
statrs = "0.16.0"
rand = "0.8.5"
ndarray = "0.15.6"
rand_distr = "0.4.3"
optimization = "0.2.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
lazy_static = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
html-escape = "0.2.13"
plotly = { version = "0.8.4", package = "plotly-fork"}

[features]
kaleido = ["plotly/kaleido"]






