[package]
name = "finalytics"
version = "0.5.2"
authors = ["Nnamdi Olisaeloka <nnamdiolisaeloka@gmail.com>"]
edition = "2021"
homepage = "https://finalytics.rs/"
repository = "https://github.com/Nnamdi-sys/finalytics"
license = "MIT"
description = "A rust library for financial data analysis"
readme = "../README.md"
keywords = ["finance", "analytics"]

[lib]
path = "src/lib.rs"


[dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
chrono = "0.4.37"
select = "0.6.0"
scraper = "0.19.0"
sentiment = "0.1.1"
polars = { version = "0.41.3", default-features = false, features = ["lazy", "dtype-datetime", "rows", "fmt_no_tty"] }
ta = "0.5.0"
num-format = "0.4.4"
smartcore = "0.3.2"
statrs = "0.17.1"
rand = "0.8.5"
ndarray = "0.15.6"
rand_distr = "0.4.3"
optimization = "0.2.0"
html-escape = "0.2.13"
plotly = { version = "0.9.0", features = ["kaleido"] }
once_cell = "1.19.0"
futures = "0.3.30"

[features]
kaleido = ["plotly/kaleido"]






