[package]
name = "finalytics-py"
version = "0.7.0"
edition = "2021"
readme = "README.md"

[lib]
name = "finalytics"
crate-type = ["cdylib"]

[dependencies]
finalytics = { path = "../rust", features = ["kaleido"] }
polars = { version = "0.41.3", default-features = false }
tokio = { version = "1.42.0", features = ["full"] }
pyo3 = { version = "0.23.3", features = ["extension-module", "generate-import-lib"] }
plotly = "0.12.1"