[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "finalytics"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["polars==1.1.0", "pyarrow==14.0.0", "plotly==5.22.0", "notebook>=5.3", "ipywidgets>=7.5", "numpy<2"]