[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "finalytics"
version = "0.8.1"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["polars==1.31.0", "pyarrow==21.0.0", "plotly==6.2.0"]