[package]
name = "finalytics"
version = "0.8.0"
authors = ["Nnamdi Olisaeloka <nnamdiolisaeloka@gmail.com>"]
edition = "2021"
homepage = "https://finalytics.rs/"
repository = "https://github.com/Nnamdi-sys/finalytics"
license = "MIT"
description = "A rust library for financial data analysis"
readme = "../README.md"
keywords = ["finance", "analytics"]

[lib]
path = "src/lib.rs"

[dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
tokio = { version = "1.45.0", features = ["full"] }
chrono = "0.4.41"
select = "0.6.1"
vader_sentiment = "0.1.1"
polars = { version = "0.41.3", default-features = false, features = ["lazy", "dtype-datetime", "rows", "fmt_no_tty", "serde", "is_in"] }
ta = "0.5.0"
smartcore = "0.4.1"
statrs = "0.18.0"
rand = "0.9.1"
ndarray = "0.16.1"
optimization = "0.2.0"
plotly = "0.12.1"
once_cell = "1.21.3"
futures = "0.3.31"
indicatif = "0.17.11"
cached = { version = "0.55.1", features = ["async"] }
anyhow = "1.0.98"
webbrowser = "1.0.4"

[features]
kaleido = ["plotly/kaleido", "plotly/kaleido_download"]






