[package]
name = "finalytics-web"
version = "0.1.1"
edition = "2021"
default-run = "finalytics-server"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
env_logger = "0.11.6"
log = "0.4.22"
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
tera = "1.20.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_urlencoded = "0.7.1"
syntect = "5.2.0"
yahoo-finance-symbols = "0.1.4"
finalytics = { path = "../rust", features = ["kaleido"] }


[[bin]]
name = "finalytics-server"
path = "src/main.rs"

[[bin]]
name = "save-images"
path = "src/images/image.rs"