[package]
name = "finalytics-web"
version = "0.1.0"
edition = "2021"

[dependencies]

# Common dependancies
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
bincode = "1.3.3"
chrono = "0.4.41"

# Server dependancies
finalytics = { path = "../rust", optional = true }
syntect = { version = "5.2.0", optional = true }
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"], optional = true }
axum = { version = "0.7.9", optional = true }


[features]
default = ["server"]
server = ["dioxus/server", "dep:tokio", "dep:finalytics", "dep:syntect", "dep:axum"]
web = ["dioxus/web"]
save_images = ["dep:finalytics", "dep:tokio"]


[build-dependencies]
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"] }
bincode = "1.3.3"
yahoo-finance-symbols = "0.1.4"
finalytics = { path = "../rust", features = ["plotly_static"] }

