[package]
name = "finalytics-web"
version = "0.1.0"
edition = "2021"

[dependencies]

# Common dependancies
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
chrono = "0.4.41"

# Server dependancies
finalytics = { path = "../rust", optional = true }
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"], optional = true }
axum = { version = "0.7.9", optional = true }
reqwest = { version = "0.12.22", features = ["json"], optional = true }
serde_json = { version = "1.0.141", optional = true }


[features]
default = ["server"]
server = ["dioxus/server", "dep:tokio", "dep:finalytics", "dep:axum", "dep:reqwest", "dep:serde_json"]
web = ["dioxus/web"]
save_images = ["dep:finalytics", "dep:tokio"]


[build-dependencies]
tokio = { version = "1.47.0", features=["macros", "rt-multi-thread"] }
finalytics = { path = "../rust" }
